# Neural-Network-CPP

./: CMakeLists.txt  MainWindow.h  Net.cpp  Net.h  NetworkScene.cpp  NeuronItem.cpp  NeuronItem.h  README.md  TrainingData.cpp  TrainingData.h  main.cpp
data/: digits.txt
src/core/: Connection.cpp  Net.cpp  Net.h  Neuron.cpp  Neuron.h  TrainingData.cpp  TrainingData.h
src/gui/: DrawDigitDialog.cpp  DrawDigitDialog.h  DrawDigitWidget.cpp  DrawDigitWidget.h  MainWindow.cpp  MainWindow.h  NetworkScene.cpp  NetworkScene.h  NeuronItem.cpp  NeuronItem.h
tools/: generateDigitsData.cpp  generateXorData.cpp
